# Tiresias_applications

acc/: CMakeLists.txt  prj.conf  (+1 more)
fall_detection/: CMakeLists.txt  app_log.txt  build_out.txt  prj.conf
fall_detection/build_1/: domains.yaml
fall_detection/build_1/_sysbuild/: autoconf.h  cmake_install.cmake
fall_detection/build_1/_sysbuild/sysbuild/images/: cmake_install.cmake
fall_detection/build_1/acc/: .ninja_log  CMakeCache.txt  build.ninja  build_info.yml.bak  compile_commands.json
fall_detection/build_1/acc/Kconfig/boards/: Kconfig.defconfig
fall_detection/build_1/acc/modules/cmsis/cmsis/: cmake_install.cmake
fall_detection/build_1/acc/modules/nrf/: cmake_install.cmake
fall_detection/build_1/acc/modules/nrf/lib/: cmake_install.cmake
fall_detection/build_1/acc/modules/nrf/modules/: cmake_install.cmake
fall_detection/build_1/acc/zephyr/: .cmake.dotconfig.checksum  cmake_install.cmake  edt.pickle  linker_zephyr_pre0.cmd.dep  runners.yaml  zephyr.dts  zephyr.elf  zephyr_final.map  zephyr_pre0.map
fall_detection/build_1/acc/zephyr/arch/: cmake_install.cmake
fall_detection/build_1/acc/zephyr/drivers/: cmake_install.cmake
fall_detection/build_1/acc/zephyr/kconfig/: sources.txt
fall_detection/build_1/acc/zephyr/lib/: cmake_install.cmake
fall_detection/build_1/zephyr/kconfig/: sources.txt
fall_detection/src/: fall_detection.c  fall_detection.h  led.c  led.h  main.c
fall_detection/src/BLE/: ble_service.c  ble_service.h
fall_detection/src/fall_detection/: fall_detection.c  fall_detection.h
fall_detection/src/led/: led.c  led.h
(+65 files in other folders)
